# CG_competition

./: README.md
opengl/src/: CMakeCache.txt  CMakeLists.txt  OpenGL  cmake_install.cmake  main.cpp  mainwindow.h  mainwindow.ui  makeclass.pl  resources.qrc
opengl/src/.cmake/api/v1/reply/: cache-v2-c06b9eed245d9cea9764.json  cmakeFiles-v1-197e059eed9450600301.json  codemodel-v2-6c1728169bbeb3586d4d.json  codemodel-v2-71453a6bfd0f55ff3b46.json  codemodel-v2-8f904a64bcc08d2511eb.json  codemodel-v2-b9740646a3aa441d7392.json  index-2023-03-26T20-55-56-0236.json  index-2023-03-27T21-47-48-0530.json  index-2023-04-03T18-21-03-0483.json  index-2023-04-03T20-30-23-0891.json  target-OpenGL-2c040f9560ac4639d4a2.json  target-OpenGL-7ce7a7a27deb07d480fa.json  target-OpenGL-a21305c0887dfc4d0246.json  target-OpenGL-c0f5baa9fb40fe1b1f56.json  target-OpenGL_autogen-0da639053bd5fe34e531.json
opengl/src/.cmake/api/v1/reply.prev/: cache-v2-485369f3e0c5937d26bb.json  cmakeFiles-v1-f9741a2acf1925ade77c.json  codemodel-v2-ef937b63b815b1d316cd.json  index-2023-02-15T23-03-15-0448.json  target-OpenGL_1-2a74e39bb954692474f4.json  target-OpenGL_1_autogen-0b309fb6548dbe60e0c1.json
opengl/src/OpenGL_2_autogen/MIKB3U5ZOU/: moc_mainwindow.cpp.d
opengl/src/OpenGL_2_autogen/QQODXPCSSB/: moc_mainview.cpp.d
opengl/src/OpenGL_autogen/MIKB3U5ZOU/: moc_mainwindow.cpp.d
opengl/src/OpenGL_autogen/QQODXPCSSB/: moc_mainview.cpp.d
opengl/src/abstractmodel/: abstractmodel.h  abstractmodel.ih  destructor.cpp
opengl/src/background/neon-stage/source/: neon.mtl
opengl/src/mainview/: cellShading.cpp  createShaderProgram.cpp  data.cpp  destroyModelBuffers.cpp  destructor.cpp  gouraudShading.cpp  initializeGL.cpp  initializeSamplers.cpp  loadMesh1.cpp  loadMesh2.cpp  mainview.cpp  mainview.h  mainview.ih  normalShading.cpp  paintGL.cpp  phongShading.cpp  resizeGL.cpp  setRotation.cpp  setScale.cpp  setShadingMode.cpp  setTextureInterpretation.cpp  updateModelTransform.cpp  updateProjectionTransform.cpp  uploadTextureData.cpp  userinput.cpp
opengl/src/mainwindow/: destructor.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ih  on_CellButton_toggled.cpp  on_GouraudButton_toggled.cpp  on_NormalButton_toggled.cpp  on_PhongButton_toggled.cpp  on_ResetRotationButton_clicked.cpp  on_ResetScaleButton_clicked.cpp  on_RotationDialX_valueChanged.cpp  on_RotationDialY_valueChanged.cpp  on_RotationDialZ_valueChanged.cpp  on_ScaleSlider_valueChanged.cpp  renderToFile.cpp
opengl/src/model/: addTexture.cpp  alignData.cpp  destructor.cpp  enableTextureID.cpp  getVNInterleaved.cpp  getVNInterleavedIndexed.cpp  hasNormals.cpp  hasTexture.cpp  initializeVertices.cpp  meshTransform.cpp  model.cpp  model.h  model.ih  model2.cpp  normalTransform.cpp  parseFace.cpp  parseNormal.cpp  parseTexture.cpp  parseVertex.cpp  setTexture.cpp  texture.cpp  textureData.cpp  textureID.cpp  unitize.cpp  unpackIndexes.cpp  vao.cpp  vbo.cpp  vertices.cpp
opengl/src/models/: neon-stage.zip:Zone.Identifier
opengl/src/models/emilia/: emilia-rezero.zip:Zone.Identifier
opengl/src/models/emilia/source/: emilia-posed.mtl
opengl/src/models/jigg/: P1.blend  P1.mtl  P2.blend  uploads_files_3590440_Jiggly.rar:Zone.Identifier
opengl/src/models/mythra/source/Mythra/: mythra.mtl
opengl/src/shaders/: fragshader_cell.glsl  fragshader_gouraud.glsl  fragshader_normal.glsl  fragshader_phong.glsl  vertshader_cell.glsl  vertshader_gouraud.glsl  vertshader_normal.glsl  vertshader_phong.glsl
opengl/src/shadingmode/: shadingmode.h
opengl/src/utility/: utility.cpp  utility.h
opengl/src/vertex/: getTextureCoords.cpp  vertex.h  vertex1.cpp  vertex2.cpp
